<resources>
    <string name="app_name">Image Searcher</string>
    <string name="search_hint">Enter search string</string>
    <string name="not_found_message">No matching images found</string>
    <string name="item_image">Item Image</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="save_label">Save</string>
    <string name="share_label">Share</string>
    <string name="info_label">Info</string>
    <string name="image_saved_message">Image saved</string>
    <string name="image_failed_message">"Failed to save image"</string>
    <string name="storage_rationale">Need permission to local storage</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8601890205077009/1937035141</string>
    <string name="banner_between_page_id" translatable="false">ca-app-pub-8601890205077009/2356697346</string>
    <string name="privacy_policy_url" translatable="false">https://firebasestorage.googleapis.com/v0/b/imagesearcher-447b4.appspot.com/o/Privacy%20Policy.htm?alt=media&amp;token=7e2e92ba-bbc6-42bf-86be-bbb74b38ccc8</string>
    <string name="size_label">Size</string>
    <string name="type_label">Type</string>
    <string name="tags_label">Tags</string>
    <string name="likes_label">Likes</string>
    <string name="views_label">Views</string>
    <string name="comments_label">Comments</string>
    <string name="info_activity_title">Info</string>
    <string name="detail_activity_title">View</string>
    <string name="history_page">History</string>
    <string name="settings_page">Settings</string>
    <string name="results_page">Results</string>
    <string name="image_page">Image</string>
    <string name="info_page">Info</string>
    <string name="image_type_label">Image type</string>
    <string name="orientation_label">Orientation</string>
    <string name="category_label">Category</string>
    <string name="min_width_label">Min width</string>
    <string name="min_height_label">Min height</string>
    <string name="colors_label">Colors</string>
    <string name="order_label">Order</string>
    <string name="clear_label">Clear</string>
    <string name="apply">Apply</string>
    <string name="clear_history">Clear history</string>

    <array name="image_type">
        <item>all</item>
        <item>photo</item>
        <item>illustration</item>
        <item>vector</item>
    </array>

    <array name="image_orientation">
        <item>all</item>
        <item>horizontal</item>
        <item>vertical</item>
    </array>

    <array name="image_category">
        <item>all</item>
        <item>fashion</item>
        <item>nature</item>
        <item>backgrounds</item>
        <item>science</item>
        <item>education</item>
        <item>people</item>
        <item>feelings</item>
        <item>religion</item>
        <item>health</item>
        <item>places</item>
        <item>animals</item>
        <item>industry</item>
        <item>food</item>
        <item>computer</item>
        <item>sports</item>
        <item>transportation</item>
        <item>travel</item>
        <item>buildings</item>
        <item>business</item>
        <item>music</item>
    </array>

    <array name="image_colors">
        <item>all</item>
        <item>grayscale</item>
        <item>transparent</item>
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>turquoise</item>
        <item>blue</item>
        <item>lilac</item>
        <item>pink</item>
        <item>white</item>
        <item>gray</item>
        <item>black</item>
        <item>brown</item>
    </array>

    <array name="image_order">
        <item>popular</item>
        <item>latest</item>
    </array>

</resources>
